Fix flashing on Safari

--- a/src/styles/GridLayout.module.css
+++ b/src/styles/GridLayout.module.css
@@ -58,7 +58,6 @@
 
 .padded {
     padding: 2rem;
-    transition: all 0.25s;
 }
 
 .blended {
